--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <img src="images/carefour.jpg" width="30" alt="Logo Robbie Lens">
+      <img src="images/carefour.jpg" width="30" alt="Logo carefour">
       <div>
         <a href="index.html">Accueil</a>
         <a href="a-propos.html">À propos</a>
@@ -88,7 +88,7 @@
 
   </main>
   <footer>
-    <img src="images/carefour.jpg" width="30" alt="Logo Robbie Lens">
+    <img src="images/carefour.jpg" width="30" alt="Logo carefour">
     <div>
       <a target="_blank" href="https://twitter.com/" class="lien-icone">
         <img src="images/facebook.png" width="30" alt="Logo Twitter">
