--- a/index.html
+++ b/index.html
@@ -51,11 +51,32 @@
                     <input type="password" name="password" class="form-control" placeholder="Mot de passe" required="required" autocomplete="off">
                     <button type="submit" class="btn btn-primary btn-block">Connexion</button>
             </form>
-            <p class="text-center"><a href="/../PasswordRecover/index.php">mot de passe oublié ?</a></p>
-            <p class="text-center"><a href="inscription.php">Inscription</a></p>
+            <p class="text-center"><a href="./PasswordRecover/changePassword.php">mot de passe oublié ?</a></p>
+            <p class="text-center"><a href="./inscrip/inscription.php">Inscription</a></p>
+            <style>
+                .login-form {
+                    width: 340px;
+                    margin: 50px auto;
+                }
+                .login-form form {
+                    margin-bottom: 15px;
+                    background: #f7f7f7;
+                    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                    padding: 30px;
+                }
+                .login-form h2 {
+                    margin: 0 0 15px;
+                }
+                .form-control, .btn {
+                    min-height: 38px;
+                    border-radius: 10px;
+                }
+                .btn {        
+                    font-size: 15px;
+                    font-weight: bold;
+                }
+            </style>
         </fieldset>
-
-        
 
       </div>
     </section>
