--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <div class="Espace-client">
         <fieldset> <legend>Connecter à votre espace perso</legend>
-            <form  action="connexion.php" method="post">
+            <form  action="./inscrip/connexion.php" method="post">
                     <h2 class="text-center">Connexion</h2>       
                     <input type="email" name="email" class="form-control" placeholder="Email" required="required" autocomplete="off">
                     <input type="password" name="password" class="form-control" placeholder="Mot de passe" required="required" autocomplete="off">
