--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles.css" rel="stylesheet">
   
-  <title>Three Blocks Example</title>
+  <title>carrefour espace client</title>
 
 </head>
 
